# KD-AFA-Net-ONNX-Runtime-Custom-Operator

./: README.md  processing_time_onnx_customop_cpu.py  processing_time_onnx_customop_gpu.py
custom_ops/kdafa_ort/: CMakeLists.txt  kdafa_afa_op.cpp
custom_ops/kdafa_ort_cuda/: CMakeLists.txt  kdafa_afa_cuda_op.cu
models/unet/: sep_unet_model_custom.py  sep_unet_parts_onnx.py
